# CubeX

./: .gitignore  .readthedocs.yaml  README.md  install.sh  main.py  pyproject.toml  requirements.txt  tree.txt
.github/workflows/: tests.yml
assets/: style.qss
docs/: build_api_docs.py
docs/source/: conf.py  faq_troubleshooting.md  file_loading.md  index.md  installation.md  introduction.md  moment_maps.md  pv_diagrams.md  spatial_analysis.md  spectral_analysis.md  splatalogue_query.md  troubleshooting.md  tutorial.md  tutorials.md  ui_overview.md  working_with_cubex.md
docs/source/_static/: custom.css
docs/source/api/: cubex.app.rst  cubex.core.exporters.rst  cubex.core.math_kernels.rst  cubex.core.rst  cubex.core.splatalogue.rst  cubex.gui.components.channel_grid_view.rst  cubex.gui.components.custom_widgets.rst  cubex.gui.components.explorer_view.rst  cubex.gui.components.graph_panels.rst  cubex.gui.components.main_window_view.rst  cubex.gui.components.rst  cubex.gui.controllers.channel_grid_controller.rst  cubex.gui.controllers.explorer_controller.rst  cubex.gui.controllers.main_controller.rst  cubex.gui.controllers.rst  cubex.gui.controllers.workers.rst  (+12 more)
src/core/: exporters.py  math_kernels.py  splatalogue.py
src/cubex/: app.py
src/gui/: custom.py  dialogs.py  explorer_tab.py  main_window.py
src/utils/: wcs_helpers.py
tests/test_core/: __init__.py  test_exporters.py  test_imports.py  test_math_kernels.py  test_splatalogue.py
tests/test_gui/: __init__.py  test_basic_gui.py  test_explorer_controller.py  test_main_controller.py  test_workers.py
(+30 files in other folders)
